# LinguaFlow

./: .gitignore  AGENTS.md  README.md  pyproject.toml
config/: settings.json
docs/architecture/: 00-开发原则.md  01-产品需求（PRD）.md  02-工程架构.md  03-项目结构.md  04-开发规范.md
docs/development/tasks/M1/: M1-001.md  M1-002.md  M1-003.md
docs/development/tasks/M2/: M2-001.md  M2-002.md  M2-003.md  M2-004.md
scripts/: test_llama.py
src/: __init__.py  main.py
src/app/: application.py
src/core/: __init__.py  exceptions.py  logger.py
src/features/: __init__.py
src/integrations/: llama_cpp.py
src/runtime/: __init__.py  app_context.py  runtime_manager.py  runtime_state.py
src/services/: config_service.py  model_service.py  prompt_service.py
src/ui/: __init__.py  main_window.py  tray.py
