[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "linguaflow"
version = "0.1.0"
description = "Local-first desktop AI tool foundation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.7,<7",
    "llama-cpp-python>=0.3,<1",
]

[project.optional-dependencies]
dev = [
    "black>=24.10",
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
